@@ -1,43 +1,46 @@
 package org.example.vivesbankproject.storage.backupZip.services;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.datatype.jsr310.deser.LocalDateTimeDeserializer;
 import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateTimeSerializer;
 import lombok.extern.slf4j.Slf4j;
-import org.example.vivesbankproject.cliente.dto.ClienteJson;
+import org.example.vivesbankproject.cliente.dto.ClienteJsonAdmin;
 import org.example.vivesbankproject.cliente.models.Cliente;
 import org.example.vivesbankproject.cliente.repositories.ClienteRepository;
-import org.example.vivesbankproject.cliente.service.ClienteService;
-import org.example.vivesbankproject.cuenta.dto.cuenta.CuentaResponse;
 import org.example.vivesbankproject.cuenta.models.Cuenta;
+import org.example.vivesbankproject.cuenta.repositories.CuentaRepository;
+import org.example.vivesbankproject.movimientos.models.Movimiento;
+import org.example.vivesbankproject.movimientos.repositories.MovimientosRepository;
 import org.example.vivesbankproject.storage.exceptions.StorageNotFound;
 import org.example.vivesbankproject.storage.exceptions.StorageInternal;
 import org.example.vivesbankproject.tarjeta.models.Tarjeta;
+import org.example.vivesbankproject.tarjeta.repositories.TarjetaRepository;
+import org.example.vivesbankproject.users.models.User;
+import org.example.vivesbankproject.users.repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
-import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeFormatterBuilder;
+import java.time.temporal.ChronoField;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
+import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
 
 @Service
@@ -45,12 +48,18 @@ import java.util.zip.ZipOutputStream;
 public class ZipFileSystemStorage implements ZipStorageService {
     private final Path rootLocation;
     private final ClienteRepository clienteRepository;
-    private ClienteService clienteService;
+    private final UserRepository userRepository;
+    private final TarjetaRepository tarjetaRepository;
+    private final CuentaRepository cuentaRepository;
+    private MovimientosRepository movimientosRepository;
 
-    public ZipFileSystemStorage(@Value("${upload.root-location}") String path, ClienteRepository clienteRepository, ClienteService clienteService) {
+    public ZipFileSystemStorage(@Value("${upload.root-location-2}") String path, ClienteRepository clienteRepository, MovimientosRepository movimientosRepository, UserRepository userRepository, TarjetaRepository tarjetaRepository, CuentaRepository cuentaRepository) {
         this.rootLocation = Paths.get(path);
         this.clienteRepository = clienteRepository;
-        this.clienteService = clienteService;
+        this.movimientosRepository = movimientosRepository;
+        this.userRepository = userRepository;
+        this.tarjetaRepository = tarjetaRepository;
+        this.cuentaRepository = cuentaRepository;
     }
 
     @Override
@@ -72,14 +81,14 @@ public class ZipFileSystemStorage implements ZipStorageService {
             try (FileOutputStream fos = new FileOutputStream(zipPath.toFile());
                  ZipOutputStream zos = new ZipOutputStream(fos)) {
 
-                Path dataDir = Paths.get("data");
+                Path dataDir = Paths.get("dataAdmin");
 
                 if (!Files.exists(dataDir)) {
-                    throw new StorageNotFound("La carpeta 'data' no existe.");
+                    throw new StorageNotFound("La carpeta 'dataAdmin' no existe.");
                 }
 
                 Files.walk(dataDir)
-                        .filter(file -> !Files.isDirectory(file) && !file.toString().endsWith(".zip")) // Filtrar archivos que no sean .zip
+                        .filter(file -> !Files.isDirectory(file) && !file.toString().endsWith(".zip"))
                         .forEach(file -> {
                             try {
                                 ZipEntry zipEntry = new ZipEntry(file.getFileName().toString());
@@ -107,70 +116,99 @@ public class ZipFileSystemStorage implements ZipStorageService {
 
     @Override
     public void loadFromZip(File filename) {
-        Path jsonFilePath = this.rootLocation.resolve(filename.toPath());
+        log.warn("inicio");
+        Path zipFilePath = this.rootLocation.resolve(filename.toPath());
 
         try {
-            if (!Files.exists(jsonFilePath)) {
-                throw new StorageNotFound("El archivo JSON no existe: " + filename);
+            if (!Files.exists(zipFilePath)) {
+                throw new StorageNotFound("El archivo ZIP no existe: " + filename);
             }
 
-            String jsonData = new String(Files.readAllBytes(jsonFilePath));
+            try (ZipInputStream zis = new ZipInputStream(Files.newInputStream(zipFilePath))) {
+                ZipEntry entry;
+                while ((entry = zis.getNextEntry()) != null) {
+                    if (entry.getName().endsWith(".json")) {
+                        String jsonData = new String(zis.readAllBytes());
 
-            ObjectMapper objectMapper = new ObjectMapper();
-            JavaTimeModule module = new JavaTimeModule();
-            module.addDeserializer(LocalDateTime.class, new LocalDateTimeDeserializer(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-            objectMapper.registerModule(module);
+                        ObjectMapper objectMapper = new ObjectMapper();
+                        JavaTimeModule module = new JavaTimeModule();
+                        module.addSerializer(LocalDateTime.class, new LocalDateTimeSerializer(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
+                        objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+                        objectMapper.registerModule(module);
 
-            List<ClienteJson> clienteMap = objectMapper.readValue(jsonData, new TypeReference<List<ClienteJson>>() {});
+                        List<ClienteJsonAdmin> clienteMap = objectMapper.readValue(jsonData, new TypeReference<>() {});
 
-            for (ClienteJson clienteJson : clienteMap) {
-                Cliente cliente = new Cliente();
-                cliente.setGuid(clienteJson.getGuid());
-                cliente.setDni(clienteJson.getDni());
-                cliente.setNombre(clienteJson.getNombre());
-                cliente.setApellidos(clienteJson.getApellidos());
-                cliente.setDireccion(clienteJson.getDireccion());
-                cliente.setEmail(clienteJson.getEmail());
-                cliente.setTelefono(clienteJson.getTelefono());
-                cliente.setFotoPerfil(clienteJson.getFotoPerfil());
-                cliente.setFotoDni(clienteJson.getFotoDni());
-                cliente.setIsDeleted(clienteJson.getIsDeleted());
+                        for (ClienteJsonAdmin clienteJsonAdmin : clienteMap) {
+                            Cliente cliente = Cliente.builder()
+                                    .id(clienteJsonAdmin.getId())
+                                    .guid(clienteJsonAdmin.getGuid())
+                                    .dni(clienteJsonAdmin.getDni())
+                                    .nombre(clienteJsonAdmin.getNombre())
+                                    .apellidos(clienteJsonAdmin.getApellidos())
+                                    .direccion(clienteJsonAdmin.getDireccion())
+                                    .email(clienteJsonAdmin.getEmail())
+                                    .telefono(clienteJsonAdmin.getTelefono())
+                                    .fotoPerfil(clienteJsonAdmin.getFotoPerfil())
+                                    .fotoDni(clienteJsonAdmin.getFotoDni())
+                                    .user(clienteJsonAdmin.getUser())
+                                    .cuentas(clienteJsonAdmin.getCuentas())
+                                    .isDeleted(clienteJsonAdmin.getIsDeleted())
+                                    .build();
 
-                Set<Cuenta> cuentas = new HashSet<>();
-                for (CuentaResponse cuentaResponse : clienteJson.getCuentas()) {
-                    Cuenta cuenta = new Cuenta();
-                    cuenta.setGuid(cuentaResponse.getGuid());
-                    cuenta.setIban(cuentaResponse.getIban());
-                    cuenta.setSaldo(new BigDecimal(cuentaResponse.getSaldo()));
-                    cuenta.setCreatedAt(LocalDateTime.parse(cuentaResponse.getCreatedAt(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-                    cuenta.setUpdatedAt(LocalDateTime.parse(cuentaResponse.getUpdatedAt(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-                    cuenta.setIsDeleted(cuentaResponse.getIsDeleted());
+                            cliente.getCuentas().forEach(cuenta -> {
+                                if (tarjetaRepository.findByGuid(cuenta.getTarjeta().getGuid()).isEmpty()) {
+                                    tarjetaRepository.save(cuenta.getTarjeta());
+                                }
+                            });
+                            if (userRepository.findByGuid(cliente.getUser().getGuid()).isEmpty()) {
+                                userRepository.save(cliente.getUser());
+                            }
+                            if (clienteRepository.findByGuid(cliente.getGuid()).isEmpty()) {
+                                Cliente cliente1 = cliente;
+                                cliente1.setCuentas(Set.of());
+                                clienteRepository.save(cliente1);
+                            }
+                            cliente.getCuentas().forEach(cuenta -> {
+                                if (cuentaRepository.findByGuid(cuenta.getGuid()).isEmpty()) {
+                                    cuentaRepository.save(cuenta);
+                                }
+                            });
+                        }
 
-                    cuenta.setCliente(cliente);
+                        List<Movimiento> movimientos = movimientosRepository.findAll();
+                        for (Movimiento movimiento : movimientos) {
+                            Movimiento nuevoMovimiento = new Movimiento();
+                            nuevoMovimiento.setGuid(movimiento.getGuid());
+                            nuevoMovimiento.setClienteGuid(movimiento.getClienteGuid());
+                            nuevoMovimiento.setCreatedAt(movimiento.getCreatedAt());
+                            nuevoMovimiento.setIsDeleted(movimiento.getIsDeleted());
 
-                    Tarjeta tarjeta = new Tarjeta();
-                    tarjeta.setGuid(cuentaResponse.getTarjetaId());
-                    tarjeta.setCreatedAt(LocalDateTime.parse(cuentaResponse.getCreatedAt(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-                    tarjeta.setUpdatedAt(LocalDateTime.parse(cuentaResponse.getUpdatedAt(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-                    tarjeta.setIsDeleted(cuentaResponse.getIsDeleted());
+                            if (movimiento.getDomiciliacion() != null) {
+                                nuevoMovimiento.setDomiciliacion(movimiento.getDomiciliacion());
+                            }
+                            if (movimiento.getIngresoDeNomina() != null) {
+                                nuevoMovimiento.setIngresoDeNomina(movimiento.getIngresoDeNomina());
+                            }
+                            if (movimiento.getPagoConTarjeta() != null) {
+                                nuevoMovimiento.setPagoConTarjeta(movimiento.getPagoConTarjeta());
+                            }
+                            if (movimiento.getTransferencia() != null) {
+                                nuevoMovimiento.setTransferencia(movimiento.getTransferencia());
+                            }
 
-                    cuenta.setTarjeta(tarjeta);
+                            movimientosRepository.save(nuevoMovimiento);
+                        }
 
-                    cuentas.add(cuenta);
+                        log.info("Archivo JSON del ZIP procesado correctamente.");
+                    }
                 }
-
-                cliente.setCuentas(cuentas);
-
-                clienteRepository.save(cliente);
             }
-
-            log.info("Archivo JSON con clientes importado: " + filename);
-
         } catch (IOException e) {
-            throw new StorageInternal("Fallo al leer el archivo JSON de clientes: " + e);
+            throw new StorageInternal("Fallo al procesar el archivo ZIP: " + e);
         }
     }
-    
+
+
     @Override
     public List<Object> loadJson(File jsonFile) {
         ObjectMapper objectMapper = new ObjectMapper();
